<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.loginreviewhero.view.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="12">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_profile"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_margin="5dp"
            android:layout_marginBottom="24dp"
            android:background="#FFFFFF"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:id="@+id/image_back_profile"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:contentDescription="@null"
                android:src="@drawable/icon_previous" />

           <ImageView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:src="@drawable/icon_profile"/>

        </android.support.v7.widget.Toolbar>


        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@null"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt_show_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/show_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt_show_mail"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/show_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/txt_show_tel"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/show_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:weightSum="1.2">

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:layout_weight="0.6"
                android:background="@drawable/bg_button"
                android:text="@string/txt_logout" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:layout_weight="0.6"
                android:background="@drawable/bg_button"
                android:text="@string/txt_ok" />

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="24dp"
                android:layout_weight="0.6"
                android:background="@drawable/bg_button"
                android:text="@string/txt_edit" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="24dp"
                android:layout_weight="0.6"
                android:background="@drawable/bg_button"
                android:text="@string/txt_cancel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
